src/objects/JBCXM__GSRelationshipType__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Attributes__c</fullName>
        <label>Attributes</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__CardConfig__c</fullName>
        <label>Card Config</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Definition__c</fullName>
        <label>Definition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__LayoutAttribute__c</fullName>
        <label>Layout Attribute</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__LayoutCriteria__c</fullName>
        <label>Layout Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Relationship Type</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__Active__c</columns>
        <columns>JBCXM__Attributes__c</columns>
        <columns>JBCXM__CardConfig__c</columns>
        <columns>JBCXM__Definition__c</columns>
        <columns>JBCXM__Description__c</columns>
        <columns>JBCXM__DisplayOrder__c</columns>
        <columns>JBCXM__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>